5.8/ai-management/ai-studio/core-concepts.mdx
---
title: "What is AI Studio?"
description: "Introduction to Tyk AI Studio - comprehensive AI management platform"
keywords: "AI Studio, AI Management, Introduction"
sidebarTitle: "What is AI Studio?"
canonical: "https://tyk.io/docs/ai-management/ai-studio/core-concepts"
noindex: true
robots: "noindex, follow"
---

Tyk AI Studio is a comprehensive platform that enables organizations to manage, govern, and deploy AI applications with enterprise-grade security, control, and observability. Before diving into installation and configuration, let's understand what AI Studio offers and its core concepts.

## Key Components & Philosophy

Tyk AI Studio is designed as a secure, observable, and extensible gateway for interacting with Large Language Models (LLMs) and other AI services. Key architectural pillars include:

*   **[AI Gateway](/5.8/ai-management/ai-studio/proxy):** The central gateway managing all interactions between your applications and various LLM providers. It enforces policies, logs activity, and handles vendor abstraction.
*   **AI Portal:** Empowers developers with a curated catalog of AI tools and services for faster innovation.
*   **[Chat](/5.8/ai-management/ai-studio/chat-interface):** Provides a secure and interactive environment for users to engage with LLMs, leveraging integrated tools and data sources.
*   **[User Management & RBAC](/5.8/ai-management/ai-studio/user-management):** Securely manages users, groups, and permissions. Access to resources like LLMs, Tools, and Data Sources is controlled via group memberships.
*   **Extensibility ([Tools](/5.8/ai-management/ai-studio/tools) & [Data Sources](/5.8/ai-management/ai-studio/datasources-rag)):** Allows integrating external APIs (Tools) and vector databases (Data Sources) into LLM workflows (e.g., for Retrieval-Augmented Generation - RAG).
*   **Policy Enforcement ([Filters](/5.8/ai-management/ai-studio/filters)):** Intercept and modify LLM requests/responses using custom scripts to enforce specific rules or data transformations.
*   **Configuration over Code:** Many aspects like LLM parameters, Filters, and [Budgets](/5.8/ai-management/ai-studio/budgeting) are configured through the UI/API rather than requiring code changes.
*   **Security First:** Features like [Secrets Management](/5.8/ai-management/ai-studio/secrets), [SSO integration](/5.8/ai-management/ai-studio/sso), and fine-grained access control are integral to the platform.
*   **Observability:** Includes systems for [Analytics & Monitoring](/5.8/ai-management/ai-studio/analytics) and [Notifications](/5.8/ai-management/ai-studio/notifications) to track usage, costs, and system events.

## Core Entities

Understanding these entities is crucial:

### User
Represents an individual interacting with Tyk AI Studio, managed within the [User Management system](/5.8/ai-management/ai-studio/user-management#core-concepts).

### Team
Teams are the central access control mechanism for organizing users and managing their access to LLMs, data sources, and tools via Catalogs. See also [Teams](/5.8/ai-management/ai-studio/teams).

### App
An App serves as the primary interface or bridge between an end-user and a Large Language Model (LLM). It acts as a managed API endpoint that wraps around an LLM provider (like OpenAI, Anthropic, or Mistral) to provide governance, security, and tracking. It encapsulates the LLMs, tools, and data sources needed for specific AI use cases and provides RESTful access via credentials.

### API Key
Credentials generated by Users to allow applications or scripts programmatic access to Tyk AI Studio APIs (like the Proxy), inheriting the User's permissions. See also [User Management](/5.8/ai-management/ai-studio/user-management#core-concepts).

### LLM Configuration
Represents a specific LLM provider and model setup (e.g., OpenAI GPT-4, Anthropic Claude 3), including parameters and potentially associated [pricing](/5.8/ai-management/ai-studio/llm-management) and [budgets](/5.8/ai-management/ai-studio/budgeting).

### Tool
Definitions of external APIs (via OpenAPI spec) that can be invoked by LLMs during chat sessions to perform actions or retrieve external data. See also [Tools](/5.8/ai-management/ai-studio/tools).

### Data Source
Connections to vector databases or other data repositories used for Retrieval-Augmented Generation (RAG) within chat sessions. See also [Data Sources](/5.8/ai-management/ai-studio/datasources-rag).

### Catalogue
Collections that group related [Tools](/5.8/ai-management/ai-studio/tools) or [Data Sources](/5.8/ai-management/ai-studio/datasources-rag) for easier management and assignment to Teams for access control.

### Secret
Securely stored credentials (API keys, tokens) referenced indirectly (e.g., `$SECRET/MY_KEY`) in configurations like LLMs, Tools, or Data Sources. See also [Secrets Management](/5.8/ai-management/ai-studio/secrets).

### Filter
Custom logic (using Tengo scripts) associated with specific execution points (e.g., pre/post LLM request) to intercept and modify requests/responses. See also [Filters](/5.8/ai-management/ai-studio/filters).

### Chat / Chat Room
Customized interfaces configured by admins that combine specific LLMs, tools, data sources, and system prompts for user interactions. See also [Chats](/5.8/ai-management/ai-studio/chat-interface).

### LLM Call Settings
Default runtime parameters (e.g., temperature, max tokens, top P) for LLMs used in chat interactions and middleware function calls. See also [LLM Call Settings](/5.8/ai-management/ai-studio/call-settings).

### Model Price
Defines the cost per million tokens (input, output, cache) for using different language models, essential for analytics and budget enforcement. See also [Model Prices](/5.8/ai-management/ai-studio/model-prices).

### Plugin
The extensibility system using a Unified Plugin SDK to add custom capabilities like Edge Gateway middleware, UI extensions, Agent plugins, and Object Hooks.

### Budget
Defines hard limits on costs (amount, currency, period) applied at the organization or LLM configuration level. See also [Budget Control](/5.8/ai-management/ai-studio/budgeting).

## Getting Started

Now that you understand the core concepts, you're ready to begin your AI Studio journey:

1. **[Choose your installation method](/5.8/ai-management/ai-studio/quickstart)**: Docker/Packages (recommended) or Kubernetes
2. **[Complete first-time setup](/5.8/ai-management/ai-studio/configuration)**: Register your admin user and configure your first LLM
3. **Explore the platform**: Start with the chat interface and gradually explore advanced features



    <Note>
    **Ready to start?** Head to the [Installation Guide](/5.8/ai-management/ai-studio/quickstart) to get AI Studio up and running in minutes.
    </Note>

